Mon Apr  7 02:06:22 1997  Paul D. Smith  <psmith@baynetworks.com>

	* Version 3.75.1

	* compatMakefile (objs): Define & use theo $(GLOB) variable so
	that it's removed correctly from build.sh.in when it's built.

Fri Apr  4 20:21:18 1997  Eli Zaretskii  <eliz@is.elta.co.il>

	* <lots>: Fixes to work in the DJGPP DOS environment.

Mon Mar 31 02:42:52 1997  Paul D. Smith  <psmith@baynetworks.com>

	* function.c (expand_function): Added new function $(wordlist).

	* make.texinfo (Filename Functions): Document $(wordlist) function.

	* vpath.c (build_vpath_lists): Construct the GPATH variable
	information in the same manner we used to construct VPATH.
	(gpath_search): New function to search GPATH.

	* make.h: Declare the new function.

	* remake.c (update_file_1): Call it, and keep VPATH if it's found.

	* make.texinfo (Search Algorithm): Document GPATH variable.

Sun Mar 30 20:57:16 1997  Paul D. Smith  <psmith@baynetworks.com>

	* main.c (handle_non_switch_argument): Defined the MAKECMDGOALS
	variable to contain the user options passed in on the cmd line.

	* make.texinfo (Goals): Document MAKECMDGOALS variable.

	* remake.c (f_mtime): Print a warning if we detect a clock skew
	error, rather than failing.

	* main.c (main): If we rebuild any makefiles and need to re-exec,
	add "-o<mkfile>" options for each makefile rebuilt to avoid
	infinite looping.

Fri Mar 28 15:26:05 1997  Paul D. Smith  <psmith@baynetworks.com>

	* job.c (construct_command_argv_internal): Track whether the last
	arg in the cmd string was empty or not (Roland).
	(construct_command_argv_internal): If the shell line is empty,
	don't do anything (Roland).

	* glob/glob.h,glob/glob.c,glob/fnmatch.c,glob/fnmatch.h: Install
	the latest changes from the GLIBC version of glob (Ulrich Drepper).

	* getloadavg.c,make-stds.texi: New version (Roland).

	* (ALL): Changed WIN32 to W32 or WINDOWS32 (RMS).

Mon Mar 24 15:33:34 1997  Rob Tulloh  <rob_tulloh@tivoli.com>
