@@ -46,6 +46,7 @@ AC_FUNC_ALLOCA
 AC_FUNC_VFORK
 AC_FUNC_SETVBUF_REVERSED
 AC_FUNC_GETLOADAVG
+AC_CHECK_LIB(kstat, kstat_open)
 AC_FUNC_STRCOLL
 
 # Check out the wait reality.
